import { existsSync } from 'node:fs';
import { join } from 'node:path';

import { ConstraintError } from 'helpful-errors';
import { given, then, useBeforeAll, when } from 'test-fns';

import { spawnProbeBetween } from '../.test/infra/spawnProbeBetween';

/**
 * .what = the faithful resurrection of the deleted genContextBrain.integration.test case4
 *         snapshot: the discovery-mode BrainChoiceNotFoundError message, driven against the
 *         REAL installed brain registry, snapshotted for all three choice variants (generic /
 *         repl / atom) (ehmpathy/rhachet#429).
 * .why  = the original snapshot lived in a jest integration test. under the #429 fix, discovery
 *         goes through a genuine runtime `import()` (importEsmSafe), and jest's vm sandbox REFUSES
 *         a dynamic import without --experimental-vm-modules — proven empirically:
 *         `TypeError [ERR_VM_DYNAMIC_IMPORT_CALLBACK_MISSING_FLAG]: A dynamic import callback was
 *         invoked without --experimental-vm-modules`. so under the fix, EVERY brain package fails
 *         to load under jest, discovery returns an empty registry, and the real-registry snapshot
 *         cannot survive in a jest test. a real node child has no vm restriction, so it drives the
 *         SAME real discovery the deleted test did and captures the SAME real-registry message —
 *         this is the deleted coverage, restored in the only form that can run under the fix.
 * .note = this is the REAL-REGISTRY twin of genContextBrain.discoveryNotFound.realnode (which
 *         uses a fixed esm fixture for a drift-proof snapshot). this one restores the ORIGINAL
 *         real-registry coverage the deleted snapshot held.
 * .note = 🔴 the roster it renders is a LIVE catalog, so it is masked by
 *         `asMaskedRealRegistryRoster` below rather than resnapped per dep bump. an unmasked
 *         snapshot here reddens on a cause this suite does not test, and each such red trains
 *         the resnap reflex — so the mask is what keeps a red here MEANINGFUL.
 * .note = the probe reaches genContextBrain through the published `rhachet/brains` contract
 *         artifact (dist/contract/sdk.brains.js), the same file a consumer resolves — the action
 *         under test crosses the contract boundary (rule.require.acceptance.blackbox).
 */
/**
 * .what = a real-registry not-found message with the REGISTRY'S OWN roster neutralized, and
 *   every byte this repo's contract owns left live
 * .why = 🔴 the roster is a live catalog: it moves with any brain-package bump and with the
 *   supplier's network list, so an unmasked snapshot reddens for a cause unrelated to this
 *   suite's subject — the not-found message's SHAPE. a maintainer then resnaps to green it,
 *   which trains the resnap reflex the snapshot exists to resist
 *   (`rule.require.contract-snapshot-exhaustiveness`, its masked-live note)
 * .note = what stays LIVE is each byte the message contract owns: the error lead line, the
 *   `choice` echoed back, the `🔭 available brains` header, the `└── (and N more)` overflow
 *   row's form, and the `available` key-set with its `atoms` / `repls` keys. so a reword, a
 *   dropped header, a lost overflow row, or a renamed key all still redden
 * .note = the roster's per-row RENDER (its glyphs, its indent, its tree characters) is pinned
 *   drift-proof by this suite's twin, `genContextBrain.discoveryNotFound.realnode`, which
 *   drives a FIXED esm fixture. this suite's own unique claim is narrower and is what the
 *   mask protects: that the real `import()` discovery path runs and produces this shape
 */
const asMaskedRealRegistryRoster = (input: { message: string }): string =>
  input.message
    // a roster row: the tree glyph and the state glyph are the contract's, the slug is the
    // registry's. collapse a run of rows to one token so the row COUNT cannot redden either
    .replace(/^ {3}├── [^\n]*(\n {3}├── [^\n]*)*$/gm, '   ├── $BRAIN_ROWS')
    // the overflow row: its form is the contract's, its N is the registry's
    .replace(/^ {3}└── \(and \d+ more\)$/gm, '   └── (and $N more)')
    // 🔴 a TRAILING row that is NOT the overflow form. a catalog short enough to fit
    //   closes on a real slug rather than on `(and N more)`, and that slug is the
    //   registry's — so without this row one live byte reached the snapshot, which is
    //   the leak the `ergo-contract-snapshots` and `ergo-acceptance-journey-coverage`
    //   lanes converged on independently. the lookahead holds the overflow form above
    //   out of this rule, so the two cannot fight over one line
    .replace(/^ {3}└── (?!\(and )[^\n]*$/gm, '   └── $BRAIN_ROW')
    // the json arrays: the key-set is the contract's, the slugs are the registry's
    .replace(/\[\n(\s+"[^"]*",?\n)+(\s+)\]/g, '[\n$2  "$BRAIN_SLUGS"\n$2]');

describe('genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance', () => {
  const brainsContractDistPath = join(
    __dirname,
    '..',
    '..',
    'dist',
    'contract',
    'sdk.brains.js',
  );
  const repoRoot = join(__dirname, '..', '..');

  given(
    '[case1] discovery mode, driven against the REAL installed brain registry',
    () => {
      const realRegistryProbePath = join(
        __dirname,
        '..',
        '.test',
        'infra',
        'probe.genContextBrain.discoveryNotFound.realRegistry.cjs',
      );

      const report = useBeforeAll(async () => {
        if (!existsSync(brainsContractDistPath))
          throw new ConstraintError(
            'built contract dist sdk.brains.js absent — run `npm run build` first',
            { brainsContractDistPath },
          );

        return spawnProbeBetween<{
          generic: { name: string | null; message: string } | null;
          repl: { name: string | null; message: string } | null;
          atom: { name: string | null; message: string } | null;
        }>({
          args: [realRegistryProbePath, brainsContractDistPath],
          label: 'discovery-not-found-realRegistry',
          options: { cwd: repoRoot },
        });
      });

      when('[t0] a generic choice matches no installed brain', () => {
        then('a BrainChoiceNotFoundError is thrown', () => {
          expect(report.generic?.name).toEqual('BrainChoiceNotFoundError');
        });

        then('the message enumerates the real registry (header + a real brain)', () => {
          expect(report.generic?.message).toContain('🔭 available brains');
          expect(report.generic?.message).toContain('anthropic/claude');
        });

        then('the real-registry generic not-found message matches snapshot', () => {
          expect(
            asMaskedRealRegistryRoster({
              message: report.generic?.message ?? '',
            }),
          ).toMatchSnapshot();
        });
      });

      when('[t1] a typed repl choice matches no installed repl', () => {
        then('a BrainChoiceNotFoundError names the repl registry', () => {
          expect(report.repl?.name).toEqual('BrainChoiceNotFoundError');
          expect(report.repl?.message).toContain('repl brain not found');
        });

        then('the real-registry repl not-found message matches snapshot', () => {
          expect(
            asMaskedRealRegistryRoster({ message: report.repl?.message ?? '' }),
          ).toMatchSnapshot();
        });
      });

      when('[t2] a typed atom choice matches no installed atom', () => {
        then('a BrainChoiceNotFoundError names the atom registry', () => {
          expect(report.atom?.name).toEqual('BrainChoiceNotFoundError');
          expect(report.atom?.message).toContain('atom brain not found');
        });

        then('the real-registry atom not-found message matches snapshot', () => {
          expect(
            asMaskedRealRegistryRoster({ message: report.atom?.message ?? '' }),
          ).toMatchSnapshot();
        });
      });
    },
  );
});
