// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t0] a generic choice matches no installed brain then: the real-registry generic not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: brain not found: nonexistent/brain-slug-xyz

🔭 available brains
   ├── $BRAIN_ROWS
   └── (and $N more)

{
  "choice": "nonexistent/brain-slug-xyz",
  "available": {
    "atoms": [
      "$BRAIN_SLUGS"
    ],
    "repls": [
      "$BRAIN_SLUGS"
    ]
  }
}"
`;

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t1] a typed repl choice matches no installed repl then: the real-registry repl not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: repl brain not found: nonexistent/repl-xyz

🔭 available brains
   ├── $BRAIN_ROWS
   └── $BRAIN_ROW

{
  "choice": {
    "repl": "nonexistent/repl-xyz"
  },
  "available": {
    "repls": [
      "$BRAIN_SLUGS"
    ]
  }
}"
`;

exports[`genContextBrain.discoveryNotFound.realRegistry.realnode.acceptance given: [case1] discovery mode, driven against the REAL installed brain registry when: [t2] a typed atom choice matches no installed atom then: the real-registry atom not-found message matches snapshot 1`] = `
"BrainChoiceNotFoundError: atom brain not found: nonexistent/atom-xyz

🔭 available brains
   ├── $BRAIN_ROWS
   └── (and $N more)

{
  "choice": {
    "atom": "nonexistent/atom-xyz"
  },
  "available": {
    "atoms": [
      "$BRAIN_SLUGS"
    ]
  }
}"
`;
